# SmallBaduk

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: main.cpp  main.h
src/sprite_system/: sprite_system.cpp  sprite_system.h
src/window_system/: window.cpp  window.h
